--- a/package.json
+++ b/package.json
@@ -35,5 +35,10 @@
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.48.1",
 		"vite": "^7.2.6"
+	},
+	"dependencies": {
+		"luxon": "^3.7.2",
+		"simplex-noise": "^4.0.3",
+		"three": "^0.182.0"
 	}
 }
